2007-06-19  Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>

	* Compiler warning fixes

2007-06-18  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix in IMAP, when all messages got expunged tinymail did not
	succeed in refreshing the summary correctly
	* Experimental removal of INTERNALDATE from the summary fetch for IMAP

2007-06-18  Javier Fernandez  <jfernandez@igalia.com>

	* Added an implementation of iter_children function, defined on
	GtkTreeModel interface.
	
2007-06-18  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(on_connection_event), (tny_maemo_conic_device_get_iap_list):
	Fix some warnings reported in tinymail trac ticket #66:
	http://tinymail.org/trac/tinymail/ticket/66

2007-06-18  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed the From and the Error reporting when sending messages
	* Fixed the support for Yahoo's SMTP
	* Added some more information to the error-happened signal for
	TnySendQueue

	* This was a major API change

2007-06-17  Philip Van Hoof  <pvanhoof@gnome.org>

	* Increased read-idle's low timeout times: now that all IDLE happens in
	a thread, it's not necessary anymore to quickly unblock.
	* Code cleanups
	* Connection timeout corrections
	* Read, Read-idle, Read-nonblock timeout corrections
	* Introduction of tny_account_start_operation and
	tny_account_stop_operation

	* This was a major API change

2007-06-15  Philip Van Hoof  <pvanhoof@gnome.org>

	* Connection failure handling in the IMAP code
	* Experimental timeout for hostname lookups
	* Unread and total count updating
	* Local folders for now will no longer emit "folder_changed" signals
	* The unread and total count of local folders at initial startup
	
2007-06-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed some flag values

2007-06-14  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c:
	(tny_camel_mime_part_add_part_default): now, if the
	CamelMimePart has a multipart content type already,