@@ -70,6 +70,39 @@ camel_file_util_encode_fixed_int32 (FILE *out, gint32 value)
 	return 0;
 }
 
+void 
+camel_file_util_read_counts (const gchar *spath, CamelFolderInfo *fi) 
+{
+	/* This code reads the beginning of the summary.mmap file for
+	 * the length and unread-count of the folder. It makes it 
+	 * possible to read the total and unread values of the 
+	 * CamelFolderInfo structure without having to read the entire
+	 * folder in (mmap it) 
+	 * It's called by get_folder_info_offline and therefore also by 
+	 * get_folder_info_online for each node in the tree. */
+
+	FILE *f = fopen (spath, "r");
+	if (f) {
+
+		gint tsize = ((sizeof (guint32) * 5) + sizeof (time_t));
+		char *buffer = malloc (tsize), *ptr;
+		guint32 version, a;
+		a = fread (buffer, 1, tsize, f);
+		if (a == tsize) 
+		{
+			ptr = buffer;
+			version = g_ntohl(get_unaligned_u32(ptr));
+			ptr += 16;
+			if (fi->total == -1)
+				fi->total = g_ntohl(get_unaligned_u32(ptr));
+			ptr += 4;
+			if (fi->unread == -1 && (version < 0x100 && version >= 13))
+				fi->unread = g_ntohl(get_unaligned_u32(ptr));
+		}
+		g_free (buffer);
+		fclose (f);
+	}
+}
 
 /**
  * camel_file_util_decode_fixed_int32:
